--- a/mcaScheduleiOS.xcodeproj/xcshareddata/xcschemes/mcaScheduleiOS.xcscheme
+++ b/mcaScheduleiOS.xcodeproj/xcshareddata/xcschemes/mcaScheduleiOS.xcscheme
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "7B553D1121D53E6800AE6708"
+            BuildableName = "mcaScheduleiOS.framework"
+            BlueprintName = "mcaScheduleiOS"
+            ReferencedContainer = "container:mcaScheduleiOS.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
