--- a/mcaScheduleiOS.xcodeproj/xcshareddata/xcschemes/mcaScheduleiOSUniversal.xcscheme
+++ b/mcaScheduleiOS.xcodeproj/xcshareddata/xcschemes/mcaScheduleiOSUniversal.xcscheme
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1D03793E21ECF6E300F70AF5"
+            BuildableName = "mcaScheduleiOSUniversal"
+            BlueprintName = "mcaScheduleiOSUniversal"
+            ReferencedContainer = "container:mcaScheduleiOS.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
