--- a/mcaScheduleiOS.xcodeproj/xcshareddata/xcschemes/mcaScheduleiOSUniversal.xcscheme
+++ b/mcaScheduleiOS.xcodeproj/xcshareddata/xcschemes/mcaScheduleiOSUniversal.xcscheme
@@ -14,6 +14,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1D03790921ECF55800F70AF5"
+               BuildableName = "mcaManageriOSUniversal"
+               BlueprintName = "mcaManageriOSUniversal"
+               ReferencedContainer = "container:../mcaManageriOS/mcaManageriOS.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "1D03793E21ECF6E300F70AF5"
                BuildableName = "mcaScheduleiOSUniversal"
                BlueprintName = "mcaScheduleiOSUniversal"
